finally got the about page to alternate imgs and align paragraphs correctly

--- a/wp-content/themes/accelerate-theme-child/style.css
+++ b/wp-content/themes/accelerate-theme-child/style.css
@@ -247,6 +247,7 @@ div.case-study-archive-images img{
 
 #about-content h2 {
 	font-family: 'Montserrat';
+  text-align: center;
 }
 
 #about-content p {
@@ -255,16 +256,19 @@ div.case-study-archive-images img{
 	font-family: 'Open Sans';
 }
 
-/* About Page */
-
-div.service-icons img {
-  margin-top: 25%;
-  margin-bottom: 25%;
+.about-intro {
+  text-align: center;
 }
 
-.services:nth-of-type(even) div.service-description img {
-  float: left;
+.services {
+  margin-bottom: 45px;
 }
-.services:nth-of-type(even) div.service-description img {
-  float: right;
+
+.services:nth-child(odd) div.service-icon img{
+    float:right;
+    margin-left: 5%;
+}
+.services:nth-child(even) div.service-icon img{
+     float:left;
+     margin-right: 5%;
 }
